fix(consonant-blocks): fix section spacing consistency

--- a/templates/consonant/blocks/columns/columns.css
+++ b/templates/consonant/blocks/columns/columns.css
@@ -46,6 +46,7 @@ main .columns .columns-row {
 
 main .columns.large .columns-row {
   margin-bottom: var(--section-spacing-large);
+  margin-top: var(--section-spacing-large);
 }
 
 main .columns .column {
